# cursed

./: .gitignore  Cargo.toml
src/: c_char.rs  exception.rs  future.rs  inout.rs  lib.rs  macros.rs  nullable.rs  sync.rs  vec.rs
src/vec/: ffi.rs
